platform/gitops/components/networking/istio/kiali/overlays/proxmox-talos/patch-vpa-requests-deployment-kiali.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
spec:
  template:
    spec:
      containers:
        - name: kiali
          resources:
            requests:
              cpu: "25m"
              memory: "96Mi"
            limits:
              memory: "144Mi"
